# school-of-solana-6-project

./: README.md
anchor_project/: Anchor.toml  package-lock.json
anchor_project/programs/mint-me-a-moment/: Cargo.toml
anchor_project/programs/mint-me-a-moment/src/: lib.rs
anchor_project/tests/: mint-me-a-moment.ts
frontend/: package-lock.json  package.json
frontend/components/: Footer.tsx  Header.tsx  TipForm.tsx  TipHistory.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/program/: mint_me_a_moment.json  mint_me_a_moment.ts
frontend/styles/: globals.css
frontend/utils/: anchorProvider.ts  programUtils.ts  walletSetup.ts
